--- a/src/css/app.css
+++ b/src/css/app.css
@@ -61,6 +61,10 @@ ul{
 
 .fila{
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 20px 0;
 }
 
 .fila .card{
@@ -69,12 +73,30 @@ ul{
     text-align: center;
     border: 1px solid;
     position: relative;
+    border-radius: 11px;
+    box-shadow: 5px 5px 7px rgba(255, 255, 255, 0.403);
 }
+
+.card-body{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+}
+
 img{
     width: 100%;
     max-width: 300px;
+    border-radius: 11px 11px 0 0;
 }
+
 .datos{
     display: flex;
     gap: 20px;
+}
+
+h2{
+    padding: 20px 0 0 10px;
 }
